v0.1.1
---

* Now using getopt in main.sh.
* Moved code to `bin` subfolder.
* Moved output conditions into `conditions` subfolder.
* Moved output plots into `plots` subfolder.
* Added auxillary intermediate data `aux` subfolder.
* Added counts of reads filtered from SAM in the summary.
* Optimized and fixed reads_trim.sh script.
* Modularized main.sh script.
* Moved scripts to separate folder.
* Fixed rmX/rmY option report.
* Command line saved in aux/CMD file.
* Filter X/Y chromosomes during SAM filter step.
* Keep MAPQ level in SAM filter output.
* Log the SAM filter step.
* Optimized pos2cutsite script by calculating distance only from the 2 closest cutsite.
* Log the UMI preparation step.
* Produce properly formatted bed files per condition.
* Moved bed creation to separate script.
* Added header line to bed file.

v0.1.0
===

Released on 20170313.