@@ -3,11 +3,9 @@ TODO
 
 * Optimize UMI deduplication memory usage.
 * Optimize memory usage for linkers addition to SAM file.
+* Optimize binning.
 
 * Allow to remove any chromosomes, or instead specify which chromosomes to keep.
-* Move barcode sequence option to pat_files.
 * The 'unmapped'reads in SAM filter step are actually not mapped to chr1-22,X,Y.
 
 * Implement global radiality centrality.
-* Move bed creation to separate script.
-* Add header line to bed file.
