@@ -30,6 +30,10 @@ function filter_sam() {
 	for condition in "${condv[@]}"; do
 		echo -e "\nAnalyzing UMIs from condition '$condition'..."
 
+		# Retrieve cutsite sequence
+		cutsite=`grep -e "^$condition\t" "$indir/pat_files" | \
+			cut -d 3 | head -n 1`
+
 		# Count condition total reads
 		echo -e "Counting condition reads..."
 		cond_count=`cat $cout/$condition/filtered.r1.fa | paste - - | \
